[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/BasicCaracter.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.5, 6 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D" groups=["pause_on_buildmode"]]
scale = Vector2( 3, 3 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.5 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -100 )
current = true

[node name="Air_buffer" type="Timer" parent="."]
wait_time = 0.065

[node name="Cyote_time" type="Timer" parent="."]
wait_time = 0.05

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
speed_scale = 2.0

[connection signal="timeout" from="Air_buffer" to="." method="_on_Air_buffer_timeout"]
[connection signal="timeout" from="Cyote_time" to="." method="_on_Cyote_time_timeout"]
